cpp/flex_bison/cal/mycalc.output
Grammar

    0 $accept: statements $end

    1 statements: statement
    2           | statements statement

    3 statement: expression CR

    4 expression: term
    5           | expression ADD term
    6           | expression SUB term

    7 term: primary_expression
    8     | term MUL primary_expression
    9     | term DIV primary_expression

   10 primary_expression: DOUBLE_LITERAL
   11                   | SUB primary_expression
   12                   | LP expression RP


Terminals, with rules where they appear

$end (0) 0
error (256)
DOUBLE_LITERAL (258) 10
ADD (259) 5
SUB (260) 6 11
MUL (261) 8
DIV (262) 9
CR (263) 3
LP (264) 12
RP (265) 12


Nonterminals, with rules where they appear

$accept (11)
    on left: 0
statements (12)
    on left: 1 2, on right: 0 2
statement (13)
    on left: 3, on right: 1 2
expression (14)
    on left: 4 5 6, on right: 3 5 6 12
term (15)
    on left: 7 8 9, on right: 4 5 6 8 9
primary_expression (16)
    on left: 10 11 12, on right: 7 8 9 11


state 0

    0 $accept: . statements $end

    DOUBLE_LITERAL  shift, and go to state 1
    SUB             shift, and go to state 2
    LP              shift, and go to state 3

    statements          go to state 4
    statement           go to state 5
    expression          go to state 6
    term                go to state 7
    primary_expression  go to state 8


state 1

   10 primary_expression: DOUBLE_LITERAL .

    $default  reduce using rule 10 (primary_expression)


state 2

   11 primary_expression: SUB . primary_expression

    DOUBLE_LITERAL  shift, and go to state 1
    SUB             shift, and go to state 2
    LP              shift, and go to state 3

    primary_expression  go to state 9


state 3

   12 primary_expression: LP . expression RP

    DOUBLE_LITERAL  shift, and go to state 1
    SUB             shift, and go to state 2
    LP              shift, and go to state 3

    expression          go to state 10
    term                go to state 7
    primary_expression  go to state 8


state 4

    0 $accept: statements . $end
    2 statements: statements . statement

    $end            shift, and go to state 11
    DOUBLE_LITERAL  shift, and go to state 1
    SUB             shift, and go to state 2
    LP              shift, and go to state 3

    statement           go to state 12
    expression          go to state 6
    term                go to state 7
    primary_expression  go to state 8


state 5

    1 statements: statement .

    $default  reduce using rule 1 (statements)


state 6

    3 statement: expression . CR
    5 expression: expression . ADD term
    6           | expression . SUB term

    ADD  shift, and go to state 13
    SUB  shift, and go to state 14
    CR   shift, and go to state 15


state 7

    4 expression: term .
    8 term: term . MUL primary_expression
    9     | term . DIV primary_expression

    MUL  shift, and go to state 16
    DIV  shift, and go to state 17

    $default  reduce using rule 4 (expression)


state 8

    7 term: primary_expression .

    $default  reduce using rule 7 (term)


state 9

   11 primary_expression: SUB primary_expression .

    $default  reduce using rule 11 (primary_expression)


state 10

    5 expression: expression . ADD term
    6           | expression . SUB term
   12 primary_expression: LP expression . RP

    ADD  shift, and go to state 13
    SUB  shift, and go to state 14
    RP   shift, and go to state 18


state 11

    0 $accept: statements $end .

    $default  accept


state 12

    2 statements: statements statement .

    $default  reduce using rule 2 (statements)


state 13

    5 expression: expression ADD . term

    DOUBLE_LITERAL  shift, and go to state 1
    SUB             shift, and go to state 2
    LP              shift, and go to state 3

    term                go to state 19
    primary_expression  go to state 8


state 14

    6 expression: expression SUB . term

    DOUBLE_LITERAL  shift, and go to state 1
    SUB             shift, and go to state 2
    LP              shift, and go to state 3

    term                go to state 20
    primary_expression  go to state 8


state 15

    3 statement: expression CR .

    $default  reduce using rule 3 (statement)


state 16

    8 term: term MUL . primary_expression

    DOUBLE_LITERAL  shift, and go to state 1
    SUB             shift, and go to state 2
    LP              shift, and go to state 3

    primary_expression  go to state 21


state 17

    9 term: term DIV . primary_expression

    DOUBLE_LITERAL  shift, and go to state 1
    SUB             shift, and go to state 2
    LP              shift, and go to state 3

    primary_expression  go to state 22


state 18

   12 primary_expression: LP expression RP .

    $default  reduce using rule 12 (primary_expression)


state 19

    5 expression: expression ADD term .
    8 term: term . MUL primary_expression
    9     | term . DIV primary_expression

    MUL  shift, and go to state 16
    DIV  shift, and go to state 17

    $default  reduce using rule 5 (expression)


state 20

    6 expression: expression SUB term .
    8 term: term . MUL primary_expression
    9     | term . DIV primary_expression

    MUL  shift, and go to state 16
    DIV  shift, and go to state 17

    $default  reduce using rule 6 (expression)


state 21

    8 term: term MUL primary_expression .

    $default  reduce using rule 8 (term)


state 22

    9 term: term DIV primary_expression .

    $default  reduce using rule 9 (term)
